setup event class with architecture.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/Events
+spring.datasource.url=jdbc:postgresql://localhost:5432/events
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
