--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+my.upload_location = uploads
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/events
 spring.datasource.username=postgres
