--- a/src/test/resource/application-test.properties
+++ b/src/test/resource/application-test.properties
@@ -9,3 +9,12 @@ spring.jpa.database=h2
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+/
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.file.name=logs/spring-boot-application.log
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
