--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 my.upload_location = uploads
-spring.sql.init.platform=postgres
+spring.sql.init.platform=events
 spring.datasource.url=jdbc:postgresql://localhost:5432/events
 spring.datasource.username=postgres
 spring.datasource.password=admin
